--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-10  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* alloc.c (gc_sweep): Use pointer-to-a-pointer loop for buffers.
+
 2012-10-10  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* commands.h (immediate_quit): Remove duplicate decl.
