--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-10-10  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Clean out old termopts cruft.
+	* termopts.h (flow_control, meta_key): Remove unused decls.
+	* dispnew.c, indent.c, nsterm.m, term.c, xsettings.c, xsmfns.c:
+	Don't include termopts.h.
+
 2012-10-10  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* alloc.c (gc_sweep): Use pointer-to-a-pointer loop for buffers.
