--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-10  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/dispnew.$(O), $(BLD)/indent.$(O))
+	($(BLD)/term.$(O)): Update dependencies.
+
 2012-10-10  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* alloc.c (mark_object): Use meaningful PVEC_NORMAL_VECTOR.
