--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-11  Kenichi Handa  <handa@gnu.org>
+
+	* .bzrignore: Add several files under admin/charsets.
+
 2012-10-07  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* configure.ac: Check that OSX is 10.4 or newer.
