--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-11  Kenichi Handa  <handa@gnu.org>
+
+	* international/eucjp-ms.el: Re-generated.
+
 2012-10-07  Kenichi Handa  <handa@gnu.org>
 
 	* international/mule-conf.el (compound-text-with-extensions): Add
