--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-10-12  Fabián Ezequiel Gallina  <fgallina@cuca>
+
+	* progmodes/python.el (python-mode-map): Replace
+	subtitute-key-definition with proper command remapping.
+	(python-nav--up-list): Fix behavior for blocks on the same level.
+
 2012-10-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* help-fns.el (describe-function-1): Handle autoloads w/o docstrings.
