--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-12  Glenn Morris  <rgm@gnu.org>
+
+	* buffer.c (Fset_buffer): Doc fix.  (Bug#12624)
+
 2012-10-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* buffer.c (Fkill_buffer): Null out the overlay list(s) as well.
