--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-12  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/w32select.$(O)): Update dependencies.
+
 2012-10-12  Eli Zaretskii  <eliz@gnu.org>
 
 	* makefile.w32-in ($(BLD)/fileio.$(O)): Add sys/file.h.
