--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2012-10-12  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* nsterm.m (hold_event_q): New static variable.
+	(EV_TRAILER, sendScrollEventAtLoc:fromEvent:): Call hold_event if
+	! q_event_ptr.
+	(hold_event): New function.
+	(ns_read_socket): If hold_event_q have events, store them and
+	return (Bug#12384).
+	(setPosition:portion:whole:): Send SIGIO to ourselves if apploopnr
+	is zero (Bug#12384).
+
 2012-10-12  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in ($(BLD)/w32select.$(O)): Update dependencies.
