--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-12  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/eieio.el (lisp-imenu-generic-expression): Fix typo.
+
 2012-10-12  Glenn Morris  <rgm@gnu.org>
 
 	* mail/rmailsum.el (rmail-header-summary):
@@ -5,8 +9,8 @@
 
 2012-10-12  Fabián Ezequiel Gallina  <fgallina@cuca>
 
-	* progmodes/python.el (python-mode-map): Replace
-	subtitute-key-definition with proper command remapping.
+	* progmodes/python.el (python-mode-map):
+	Replace subtitute-key-definition with proper command remapping.
 	(python-nav--up-list): Fix behavior for blocks on the same level.
 
 2012-10-11  Stefan Monnier  <monnier@iro.umontreal.ca>
