--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-10-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* help-fns.el (describe-variable, describe-function-1):
+	* help-mode.el (help-make-xrefs): Remove error handler, made unneeded.
+
 	* emacs-lisp/eieio.el (lisp-imenu-generic-expression): Fix typo.
 
 2012-10-12  Glenn Morris  <rgm@gnu.org>
