Document 24.3 ImageMagick changes.
* doc/emacs/files.texi (File Conveniences): ImageMagick enabled by default.

* doc/lispref/display.texi (ImageMagick Images): ImageMagick enabled by default.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-13  Chong Yidong  <cyd@gnu.org>
+
+	* files.texi (File Conveniences): ImageMagick enabled by default.
+
 2012-10-10  Dani Moncayo  <dmoncayo@gmail.com>
 
 	* basic.texi (Arguments): Fix typos.
