--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-13  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* fileio.c: Formatting fixes.
+
 2012-10-13  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Fix some stat-related races.
