--- a/lisp/url/ChangeLog
+++ b/lisp/url/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-13  Chong Yidong  <cyd@gnu.org>
+
+	* url-http.el (url-http):
+	* url.el (url-retrieve-internal): Doc fix (Bug#6407).
+
 2012-10-08  Glenn Morris  <rgm@gnu.org>
 
 	* url-methods.el (url-scheme-get-property): url-https.el was
