--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-10-14  Eli Zaretskii  <eliz@gnu.org>
+
+	* progmodes/compile.el (compilation-error-regexp-alist-alist):
+	Adjust the msft regexp to the output of Studio 2010, and move msft
+	before edg-1.  See the discussion on emacs-devel,
+	http://lists.gnu.org/archive/html/emacs-devel/2012-09/msg00579.html,
+	for the details.
+
 2012-10-14  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/eieio.el (eieio-oset-default, eieio-oset, oset-default)
