--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-10-15  Daniel Colascione  <dancol@dancol.org>
+
+	* dbusbind.c: Fix cygw32 build break when compiling with dbus
+	enabled by undefining the symbol "interface", which the platform
+	headers define to something incompatible.
+
 2012-10-14  Daniel Colascione  <dancol@dancol.org>
 
 	* image.c (init_tiff_functions, init_imagemagick_functions)
