--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-15  Chong Yidong  <cyd@gnu.org>
+
+	* emacs-lisp/byte-run.el (defsubst): Doc fix.
+
 2012-10-14  Eli Zaretskii  <eliz@gnu.org>
 
 	* window.el (display-buffer): Doc fix.
