--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-10-15  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (install-man, install-etc):
+	Apply $TRANSFORM.  (Bug#12536#34)
+	(clean): Delete etc/emacs.tmpdesktop.
+
 2012-10-11  Kenichi Handa  <handa@gnu.org>
 
 	* .bzrignore: Add several files under admin/charsets.
