--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-10-16  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* editfns.c (get_system_name): Remove.
+	* lisp.h (get_system_name): Remove prototype.
+	* xrdb.c (getenv, getpwuid, getpwnam): Remove prototypes.
+	(get_environ_db): Use Vsystem_name.  Avoid call to strlen.
+
 2012-10-15  Daniel Colascione  <dancol@dancol.org>
 
 	* dbusbind.c: Add comment explaining reason for previous change.
