* doc/emacs/search.texi (Query Replace): Document multi-buffer replacement keys.
* doc/emacs/maintaining.texi (Tags Search): Change link "Replace" to
"Query Replace".

* lisp/replace.el (query-replace-help): Mention multi-buffer replacement
keys in the Help message.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,11 @@
+2012-10-16  Juri Linkov  <juri@jurta.org>
+
+	* search.texi (Query Replace): Document multi-buffer replacement
+	keys.  (Bug#12655)
+
+	* maintaining.texi (Tags Search): Change link "Replace" to
+	"Query Replace".
+
 2012-10-13  Chong Yidong  <cyd@gnu.org>
 
 	* files.texi (File Conveniences): ImageMagick enabled by default.
