--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -32,13 +32,13 @@
 	(offset_to_section, relocate_offset, OFFSET_TO_RVA)
 	(RVA_TO_OFFSET, RVA_TO_SECTION_OFFSET, PTR_TO_RVA)
 	(OFFSET_TO_PTR, ROUND_UP, ROUND_DOWN)
-	(copy_executable_and_move_sections, ADJUST_IMPORT_RVA, main): Use
-	DWORD_PTR instead of DWORD for compatibility with x64.
+	(copy_executable_and_move_sections, ADJUST_IMPORT_RVA, main):
+	Use DWORD_PTR instead of DWORD for compatibility with x64.
 
 	* nmake.defs: Support AMD64.
 	(EMACS_HEAPSIZE, EMACS_PURESIZE, EMACS_MANIFEST): New macros.
 
-	* gmake.defs: (EMACS_HEAPSIZE, EMACS_PURESIZE, EMACS_MANIFEST):
+	* gmake.defs (EMACS_HEAPSIZE, EMACS_PURESIZE, EMACS_MANIFEST):
 	New macros.
 
 	* addsection.c (pfnCheckSumMappedFile, rva_to_section)
@@ -478,7 +478,7 @@
 
 2012-02-05  Christoph Scholtes  <cschol2112@googlemail.com>
 
-	* README.W32: Clarification for inclusion in source tarball. (Bug#9750)
+	* README.W32: Clarification for inclusion in source tarball (bug#9750).
 
 	* gmake.defs (PRAGMA_SYSTEM_HEADER): Add for GCC.
 
@@ -487,7 +487,7 @@
 	* makefile.w32-in (maybe-copy-distfiles)
 	(maybe-copy-distfiles-CMD, maybe-copy-distfiles-SH)
 	(create-tmp-dist-dir): Add to make --distfiles optional.
-	(dist): Use create-tmp-dist-dir and maybe-copy-distfiles. (Bug#10261)
+	(dist): Use create-tmp-dist-dir and maybe-copy-distfiles (bug#10261).
 
 2012-02-04  Eli Zaretskii  <eliz@gnu.org>
 
