--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-17  Dani Moncayo  <dmoncayo@gmail.com>
+
+	* mini.texi (Repetition): Copyedit.
+
 2012-10-16  Juri Linkov  <juri@jurta.org>
 
 	* search.texi (Query Replace): Document multi-buffer replacement
