--- a/doc/emacs/mini.texi
+++ b/doc/emacs/mini.texi
@@ -689,7 +689,7 @@ unless it is identical to the most recent item.
   Once inside the minibuffer for @kbd{C-x @key{ESC} @key{ESC}}, you
 can use the usual minibuffer history commands (@pxref{Minibuffer
 History}) to move through the history list.  After finding the desired
-previous command, you can edit its expression as usual and then repeat
+previous command, you can edit its expression as usual and then execute
 it by typing @key{RET}.
 
 @vindex isearch-resume-in-command-history
